--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-.idea
-.idea/
-.idea/*
-.idea/*.*
+.settings
+.settings/
+.settings/*
+.settings/*.*
+bin
+bin/
+bin/*
+bin/*.*
 target
 target/
 target/*
 target/*.*
 .classpath
 .project
-.settings
